fix menu btn alignment, add profile pic to team members

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -446,9 +446,9 @@ footer {
     display: none;
   }
   .mobile_button {
-    margin: 12px 12px;
     display: block;
     width: 50px;
+    height: 50px;
     position: relative;
   }
   .mobile_open {
